--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up C environment
-      uses: actions/setup-cxx@v2
-      with:
-        compiler: gcc
+    - name: Set up C/C++
+      run: sudo apt-get install build-essential
 
     - name: Build
       run: make
