--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on: [push, pull_request]
 
 jobs:
   build:
+  permissions:
+    checks: write
+    
     runs-on: ubuntu-latest
 
     steps:
@@ -30,3 +33,5 @@ jobs:
       if: success() || failure() # always run even if the previous step fails
       with:
         report_paths: 'test/result/*.xml'
+        permissions:
+          checks: write
