--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,3 +34,4 @@ jobs:
       if: success() || failure() # always run even if the previous step fails
       with:
         report_paths: 'test/result/*.xml'
+        fail_on_failure: true
