--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,11 @@ name: Build
 
 on: [push, pull_request]
 
+permissions:
+  checks: write
+
 jobs:
+
   build:
     runs-on: ubuntu-latest
 
@@ -13,5 +17,21 @@ jobs:
     - name: Set up C/C++
       run: sudo apt-get install build-essential
 
+    - name: Set up Python 3
+      run: sudo apt-get install python3
+
     - name: Build
       run: make
+
+    - name: Run Test
+      run: make test
+
+    - name: Convert Test Result to JUnit
+      run: python3 test/convert_to_junit_result.py
+
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v4
+      if: success() || failure() # always run even if the previous step fails
+      with:
+        report_paths: 'test/result/*.xml'
+        fail_on_failure: true
